--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
+<li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#publications">PROGRESS</a>
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
@@ -158,6 +162,18 @@
         </div>
     </section>
     <!-- Awards -->
+
+    <!-- Progress -->
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="Progress">
+        <div class="container px-5">
+            <header>
+                <h2 id="Progress-subtitle"><i class="bi bi-Progress-fill"></i>PROGRESS </h2>
+            </header>
+            <div class="main-body" id="Progress-md"></div>
+
+        </div>
+    </section>
+    <!-- Progress -->
 
 
     <!-- Footer-->
