--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
-<li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#publications">PROGRESS</a>
+                    <li class="nav-item">
+                        <a class="nav-link me-lg-3" href="#progress">PROGRESS</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
@@ -164,12 +163,12 @@
     <!-- Awards -->
 
     <!-- Progress -->
-    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="Progress">
+    <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="progress">
         <div class="container px-5">
             <header>
-                <h2 id="Progress-subtitle"><i class="bi bi-Progress-fill"></i>PROGRESS </h2>
+                <h2 id="progress-subtitle"><i class="bi bi-progress-fill"></i>PROGRESS </h2>
             </header>
-            <div class="main-body" id="Progress-md"></div>
+            <div class="main-body" id="progress-md"></div>
 
         </div>
     </section>
