--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <a class="nav-link me-lg-3" href="#page-top">HOME</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link me-lg-3" href="#progress">PROGRESS</a>
+                        <a class="nav-link me-lg-3" href="#publications">PUBLICATIONS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-lg-3" href="#awards">AWARDS</a>
@@ -135,17 +135,17 @@
     </section>
     <!-- Home -->
 
-    <!-- Progress -->
-    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="progress">
+    <!-- Publications -->
+    <section class="bg-gradient-primary-to-secondary-gray mt5 md5" id="publications">
         <div class="container px-5">
             <header>
-                <h2 id="progress-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PROGRESS</h2>
+                <h2 id="publications-subtitle"><i class="bi bi-file-text-fill"></i>&nbsp;PUBLICATIONS</h2>
             </header>
-            <div class="main-body" id="progress-md"></div>
+            <div class="main-body" id="publications-md"></div>
 
         </div>
     </section>
-    <!-- Progress  -->
+    <!-- Publications  -->
 
     <!-- Awards -->
     <section class="bg-gradient-primary-to-secondary-light mt5 md5" id="awards">
